spacing fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,5 +31,5 @@ body {
 
 .filler-page {
     margin-top: 2em;
-    // margin-bottom: 2em;
+    margin-bottom: 2em;
 }
